# fastqc-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: conda-publish.yml  release.yml
benches/: simd_modules.rs
docs/: benchmark.txt
docs/history/: README.md  claude-code-benchmark-diff.txt  claude-code-benchmark-with-ont.txt  claude-code-bootstrap.txt  claude-code-github-action.txt  claude-code-speed-up.txt  claude-code-trim-galore.txt
recipe/: recipe.yaml
src/: analysis.rs  config.rs  error.rs  lib.rs  main.rs  simd.rs
src/graphs/: base_group.rs  box_plot.rs  color.rs  line_graph.rs  mod.rs  quality_count.rs  tile_graph.rs
src/modules/: adapter_content.rs  basic_stats.rs  duplication_level.rs  gc_model.rs  kmer_content.rs  mod.rs  n_content.rs  overrepresented_seqs.rs  per_base_quality.rs  per_base_sequence_content.rs  per_sequence_gc_content.rs  per_sequence_quality.rs  per_tile_quality.rs  sequence_length_distribution.rs
src/report/: html.rs  json_report.rs  mod.rs  summary.rs  text_report.rs
src/sequence/: bam.rs  colorspace.rs  contaminant.rs  fastq.rs  file_group.rs  mod.rs  phred.rs
src/stats/: mod.rs  normal_distribution.rs
src/trim_galore/: adapter.rs  config.rs  mod.rs
tests/test_data/: test.sam
