[package]
name = "fastqc-rs"
version = "0.14.0"
edition = "2021"
description = "A quality control tool for high throughput sequence data"
license = "GPL-3.0"

[[bin]]
name = "fastqc-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
bzip2 = "0.4"
zip = "2"
base64 = "0.22"
thiserror = "2"
rayon = "1"
statrs = "0.17"
ahash = "0.8"
noodles = { version = "0.109", features = ["bam", "sam", "bgzf", "core"] }
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
