[package]
name = "fastqc-rs"
version = "0.13.0"
edition = "2021"
description = "A quality control tool for high throughput sequence data"
license = "GPL-3.0"

[[bin]]
name = "fastqc-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
bzip2 = "0.4"
zip = "2"
base64 = "0.22"
thiserror = "2"
rayon = "1"
statrs = "0.17"
ahash = "0.8"
aho-corasick = "1"
memchr = "2"
pulp = "0.22"
bytemuck = { version = "1", features = ["derive"] }
noodles = { version = "0.109", features = ["bam", "sam", "bgzf", "core"] }

# mimalloc is opt-in via the `mimalloc` feature and gated off on Windows to
# avoid requiring MSVC Build Tools / MinGW / clang-cl for the default build.
# Enable with `cargo build --release --features mimalloc` on Unix-like hosts.
[target.'cfg(not(target_os = "windows"))'.dependencies]
mimalloc = { version = "0.1", default-features = false, optional = true }

[features]
default = []
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simd_modules"
harness = false
